concat dataset 99 and rumah123

--- a/src/notebooks/preparation_data.ipynb
+++ b/src/notebooks/preparation_data.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "id": "d5a5cedb",
    "metadata": {},
    "outputs": [
@@ -190,7 +190,7 @@
        "[27133 rows x 7 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "id": "da929ef7",
    "metadata": {},
    "outputs": [],
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "id": "65b19014",
    "metadata": {},
    "outputs": [
@@ -405,7 +405,7 @@
        "[27133 rows x 7 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "id": "77a1b766",
    "metadata": {},
    "outputs": [
@@ -616,7 +616,7 @@
        "[27133 rows x 7 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -649,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "id": "5c6d122b",
    "metadata": {},
    "outputs": [],
@@ -672,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "id": "929dcffd",
    "metadata": {},
    "outputs": [
@@ -680,7 +680,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\akmal\\AppData\\Local\\Temp\\ipykernel_19400\\253415893.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\akmal\\AppData\\Local\\Temp\\ipykernel_14672\\253415893.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -699,18 +699,228 @@
    "id": "5e1447d8",
    "metadata": {},
    "source": [
-    "Export CSV"
+    "### Export CSV"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "id": "0061ba76",
    "metadata": {},
    "outputs": [],
    "source": [
     "rumah123_df.to_csv(\"../../data/rumah123_cleaned.csv\", index=False)\n",
     "web99_df.to_csv(\"../../data/99_cleaned.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "884407ab",
+   "metadata": {},
+   "source": [
+    "### Gabung data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "3f5fce14",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>price</th>\n",
+       "      <th>name</th>\n",
+       "      <th>location</th>\n",
+       "      <th>bedroom</th>\n",
+       "      <th>bathroom</th>\n",
+       "      <th>land_area</th>\n",
+       "      <th>building_area</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1680.0</td>\n",
+       "      <td>Rumah Baru Gress Daerah Merr Dan Jalan Kembar ...</td>\n",
+       "      <td>Rungkut, Surabaya</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>67</td>\n",
+       "      <td>120</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>950.0</td>\n",
+       "      <td>Jual Rumah 2 Lantai Medokan Ayu Utara</td>\n",
+       "      <td>Medokan Ayu, Surabaya</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>72</td>\n",
+       "      <td>140</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>500.0</td>\n",
+       "      <td>Rumah Dekat Merr 500juta Di Wonorejo Rungkut</td>\n",
+       "      <td>Wonorejo, Surabaya</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>30</td>\n",
+       "      <td>36</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>950.0</td>\n",
+       "      <td>Cluster Baru Mewah Dekat Merr Oerr Dan Kampus</td>\n",
+       "      <td>Sukolilo, Surabaya</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>50</td>\n",
+       "      <td>55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>600.0</td>\n",
+       "      <td>Perumahan Murah Kebraon Surabaya Selatan</td>\n",
+       "      <td>Kebraon, Surabaya</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>50</td>\n",
+       "      <td>56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7237</th>\n",
+       "      <td>2500.0</td>\n",
+       "      <td>Rumah Baru Simpang Darmo Permai Utara Surabaya...</td>\n",
+       "      <td>Surabaya</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>150</td>\n",
+       "      <td>200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7238</th>\n",
+       "      <td>2500.0</td>\n",
+       "      <td>Dijual Rumah Araya Surabaya Galaxy Bumi Permai</td>\n",
+       "      <td>Sukolilo, Surabaya</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>147</td>\n",
+       "      <td>200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7239</th>\n",
+       "      <td>2500.0</td>\n",
+       "      <td>HUNIAN PILIHAN! Rumah di Manyar, LT 240m² LB 3...</td>\n",
+       "      <td>Surabaya</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>240</td>\n",
+       "      <td>300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7240</th>\n",
+       "      <td>2500.0</td>\n",
+       "      <td>BEST OFFER! Rumah Untuk Investasi area Citrala...</td>\n",
+       "      <td>Surabaya</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>105</td>\n",
+       "      <td>125</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7243</th>\n",
+       "      <td>225.0</td>\n",
+       "      <td>DISEWAKAN RUMAH DAERAH DIPONEGORO</td>\n",
+       "      <td>Surabaya</td>\n",
+       "      <td>6</td>\n",
+       "      <td>4</td>\n",
+       "      <td>642</td>\n",
+       "      <td>600</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>32789 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       price                                               name  \\\n",
+       "0     1680.0  Rumah Baru Gress Daerah Merr Dan Jalan Kembar ...   \n",
+       "1      950.0              Jual Rumah 2 Lantai Medokan Ayu Utara   \n",
+       "2      500.0       Rumah Dekat Merr 500juta Di Wonorejo Rungkut   \n",
+       "3      950.0      Cluster Baru Mewah Dekat Merr Oerr Dan Kampus   \n",
+       "4      600.0           Perumahan Murah Kebraon Surabaya Selatan   \n",
+       "...      ...                                                ...   \n",
+       "7237  2500.0  Rumah Baru Simpang Darmo Permai Utara Surabaya...   \n",
+       "7238  2500.0     Dijual Rumah Araya Surabaya Galaxy Bumi Permai   \n",
+       "7239  2500.0  HUNIAN PILIHAN! Rumah di Manyar, LT 240m² LB 3...   \n",
+       "7240  2500.0  BEST OFFER! Rumah Untuk Investasi area Citrala...   \n",
+       "7243   225.0                  DISEWAKAN RUMAH DAERAH DIPONEGORO   \n",
+       "\n",
+       "                   location  bedroom  bathroom  land_area  building_area  \n",
+       "0         Rungkut, Surabaya        3         3         67            120  \n",
+       "1     Medokan Ayu, Surabaya        3         3         72            140  \n",
+       "2        Wonorejo, Surabaya        2         1         30             36  \n",
+       "3        Sukolilo, Surabaya        2         2         50             55  \n",
+       "4         Kebraon, Surabaya        2         1         50             56  \n",
+       "...                     ...      ...       ...        ...            ...  \n",
+       "7237               Surabaya        4         4        150            200  \n",
+       "7238     Sukolilo, Surabaya        4         2        147            200  \n",
+       "7239               Surabaya        3         2        240            300  \n",
+       "7240               Surabaya        2         1        105            125  \n",
+       "7243               Surabaya        6         4        642            600  \n",
+       "\n",
+       "[32789 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.concat([rumah123_df, web99_df])\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "ea6bb74a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"../../data/full_dataset.csv\", index=False)"
    ]
   }
  ],
