add preprocessing and modeling

--- a/src/notebooks/model.ipynb
+++ b/src/notebooks/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 61,
    "id": "2d14d53b",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": null,
    "id": "099256cf",
    "metadata": {},
    "outputs": [
@@ -60,14 +60,14 @@
     "X = rumah123_df.drop(columns=['price'])\n",
     "y = rumah123_df['price']\n",
     "\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42) # 80% - 20%\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "print(X_train.index.size)\n",
     "print(X_test.index.size)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 63,
    "id": "38c50312",
    "metadata": {},
    "outputs": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 64,
    "id": "afdbc1ca",
    "metadata": {},
    "outputs": [],
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 65,
    "id": "ff2b329d",
    "metadata": {},
    "outputs": [],
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 66,
    "id": "9cac347e",
    "metadata": {},
    "outputs": [
@@ -212,7 +212,7 @@
        "3    MaxAbs  0.666684    0.011945"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 67,
    "id": "656f9834",
    "metadata": {},
    "outputs": [],
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 68,
    "id": "c7088f35",
    "metadata": {},
    "outputs": [],
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 69,
    "id": "c5710035",
    "metadata": {},
    "outputs": [],
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 70,
    "id": "41a343b0",
    "metadata": {},
    "outputs": [
@@ -303,7 +303,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000225 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000211 seconds.\n",
       "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 479\n",
       "[LightGBM] [Info] Number of data points in the train set: 11679, number of used features: 5\n",
@@ -392,7 +392,7 @@
        "1    Extra Trees  204.232410  77908.970171  279.121784  0.654246"
       ]
      },
-     "execution_count": 183,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 71,
    "id": "c0159a39",
    "metadata": {},
    "outputs": [],
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 72,
    "id": "1e2de9aa",
    "metadata": {},
    "outputs": [
@@ -444,8 +444,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000176 seconds.\n",
-      "You can set `force_col_wise=true` to remove the overhead.\n",
+      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000083 seconds.\n",
+      "You can set `force_row_wise=true` to remove the overhead.\n",
+      "And if memory is not enough, you can set `force_col_wise=true`.\n",
       "[LightGBM] [Info] Total Bins 479\n",
       "[LightGBM] [Info] Number of data points in the train set: 11679, number of used features: 5\n",
       "[LightGBM] [Info] Start training from score 1226.017296\n"
