update preprocessing and modeling

--- a/src/notebooks/preprocessing.ipynb
+++ b/src/notebooks/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 191,
    "id": "3e60e4bc",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 192,
    "id": "a3626cfe",
    "metadata": {},
    "outputs": [
@@ -121,7 +121,7 @@
        "4      Kebraon, Surabaya        2         1         50             56  "
       ]
      },
-     "execution_count": 153,
+     "execution_count": 192,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 193,
    "id": "a16c0f4c",
    "metadata": {},
    "outputs": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 194,
    "id": "a9eea572",
    "metadata": {},
    "outputs": [],
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 195,
    "id": "2c02590e",
    "metadata": {},
    "outputs": [
@@ -293,7 +293,7 @@
        "building_area   147.0  500000.0  "
       ]
      },
-     "execution_count": 156,
+     "execution_count": 195,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 196,
    "id": "6c8275f8",
    "metadata": {},
    "outputs": [
@@ -328,7 +328,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 197,
    "id": "5770530e",
    "metadata": {},
    "outputs": [],
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 198,
    "id": "67c5d1fb",
    "metadata": {},
    "outputs": [
@@ -365,7 +365,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 198,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 199,
    "id": "5ab4e1bf",
    "metadata": {},
    "outputs": [
@@ -394,7 +394,7 @@
        "9650"
       ]
      },
-     "execution_count": 160,
+     "execution_count": 199,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 200,
    "id": "70392b0c",
    "metadata": {},
    "outputs": [
@@ -444,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 201,
    "id": "93fac544",
    "metadata": {},
    "outputs": [
@@ -476,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 202,
    "id": "9d9d029d",
    "metadata": {},
    "outputs": [],
@@ -509,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 203,
    "id": "66197f23",
    "metadata": {},
    "outputs": [
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 204,
    "id": "01780ed6",
    "metadata": {},
    "outputs": [],
@@ -662,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 205,
    "id": "489f7b03",
    "metadata": {},
    "outputs": [],
@@ -680,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 206,
    "id": "ae984eb4",
    "metadata": {},
    "outputs": [
@@ -786,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 207,
    "id": "eeeb4ec9",
    "metadata": {},
    "outputs": [
@@ -810,19 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
-   "id": "1394333b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Mean encoding pada kolom 'location' terhadap target 'price'\n",
-    "mean_encoded = rumah123_df.groupby('location')['price'].mean()\n",
-    "rumah123_df['location'] = rumah123_df['location'].map(mean_encoded)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 208,
    "id": "607e4380",
    "metadata": {},
    "outputs": [
@@ -840,9 +828,9 @@
       " 2   bathroom       14599 non-null  int64  \n",
       " 3   land_area      14599 non-null  int64  \n",
       " 4   building_area  14599 non-null  int64  \n",
-      " 5   location       14599 non-null  float64\n",
-      "dtypes: float64(2), int64(4)\n",
-      "memory usage: 798.4 KB\n"
+      " 5   location       14599 non-null  object \n",
+      "dtypes: float64(1), int64(4), object(1)\n",
+      "memory usage: 798.4+ KB\n"
      ]
     }
    ],
@@ -852,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 209,
    "id": "c8c0dda2",
    "metadata": {},
    "outputs": [],
