--- a/src/notebooks/model.ipynb
+++ b/src/notebooks/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 96,
    "id": "2d14d53b",
    "metadata": {},
    "outputs": [],
@@ -30,6 +30,54 @@
   },
   {
    "cell_type": "markdown",
+   "id": "53fec486",
+   "metadata": {},
+   "source": [
+    "### Load Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "7e1464a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rumah123_df = pd.read_csv(\"../../data/rumah123_ready.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1e56ce01",
+   "metadata": {},
+   "source": [
+    "### Mean Encoding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "id": "5352102e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Mean encoding pada kolom 'location' terhadap target 'price'\n",
+    "mean_encoded = rumah123_df.groupby('location')['price'].mean()\n",
+    "rumah123_df['location'] = rumah123_df['location'].map(mean_encoded)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "id": "765c7b0a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mean_encoded.to_json('../../data/mean_encoded_location.json', orient='records', lines=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4e400dca",
    "metadata": {},
    "source": [
@@ -38,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "id": "099256cf",
    "metadata": {},
    "outputs": [
@@ -55,11 +103,8 @@
     "from sklearn.linear_model import LinearRegression\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "# Splitting dataset menjadi train dan test dengan perbandingan 8:2  \n",
-    "rumah123_df = pd.read_csv(\"../../data/rumah123_ready.csv\")\n",
     "X = rumah123_df.drop(columns=['price'])\n",
     "y = rumah123_df['price']\n",
-    "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "print(X_train.index.size)\n",
     "print(X_test.index.size)"
@@ -67,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 101,
    "id": "38c50312",
    "metadata": {},
    "outputs": [
@@ -105,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 102,
    "id": "afdbc1ca",
    "metadata": {},
    "outputs": [],
@@ -121,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 103,
    "id": "ff2b329d",
    "metadata": {},
    "outputs": [],
@@ -145,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 104,
    "id": "9cac347e",
    "metadata": {},
    "outputs": [
@@ -212,7 +257,7 @@
        "3    MaxAbs  0.666684    0.011945"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 105,
    "id": "656f9834",
    "metadata": {},
    "outputs": [],
@@ -247,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 106,
    "id": "c7088f35",
    "metadata": {},
    "outputs": [],
@@ -264,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 107,
    "id": "c5710035",
    "metadata": {},
    "outputs": [],
@@ -295,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 108,
    "id": "41a343b0",
    "metadata": {},
    "outputs": [
@@ -303,7 +348,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000211 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000180 seconds.\n",
       "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 479\n",
       "[LightGBM] [Info] Number of data points in the train set: 11679, number of used features: 5\n",
@@ -392,7 +437,7 @@
        "1    Extra Trees  204.232410  77908.970171  279.121784  0.654246"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 109,
    "id": "c0159a39",
    "metadata": {},
    "outputs": [],
@@ -436,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 110,
    "id": "1e2de9aa",
    "metadata": {},
    "outputs": [
@@ -444,9 +489,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.000083 seconds.\n",
-      "You can set `force_row_wise=true` to remove the overhead.\n",
-      "And if memory is not enough, you can set `force_col_wise=true`.\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000270 seconds.\n",
+      "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 479\n",
       "[LightGBM] [Info] Number of data points in the train set: 11679, number of used features: 5\n",
       "[LightGBM] [Info] Start training from score 1226.017296\n"
