--- a/src/notebooks/model.ipynb
+++ b/src/notebooks/model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 125,
    "id": "2d14d53b",
    "metadata": {},
    "outputs": [],
@@ -10,6 +10,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import seaborn as sns\n",
+    "import joblib\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n",
@@ -38,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 126,
    "id": "7e1464a8",
    "metadata": {},
    "outputs": [],
@@ -56,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 127,
    "id": "5352102e",
    "metadata": {},
    "outputs": [],
@@ -68,12 +69,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 128,
    "id": "765c7b0a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['../../models/mean_encoder.joblib']"
+      ]
+     },
+     "execution_count": 128,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "mean_encoded.to_json('../../data/mean_encoded_location.json', orient='records', lines=True)"
+    "joblib.dump(mean_encoded.to_dict(), '../../models/mean_encoder.joblib')"
    ]
   },
   {
@@ -86,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 129,
    "id": "099256cf",
    "metadata": {},
    "outputs": [
@@ -112,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 130,
    "id": "38c50312",
    "metadata": {},
    "outputs": [
@@ -150,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 131,
    "id": "afdbc1ca",
    "metadata": {},
    "outputs": [],
@@ -166,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 132,
    "id": "ff2b329d",
    "metadata": {},
    "outputs": [],
@@ -190,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 133,
    "id": "9cac347e",
    "metadata": {},
    "outputs": [
@@ -257,7 +269,7 @@
        "3    MaxAbs  0.666684    0.011945"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,16 +282,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 134,
    "id": "656f9834",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['../../models/scaler.joblib']"
+      ]
+     },
+     "execution_count": 134,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Normalisasi dengan MinMaxScaler\n",
     "best_scaler_name = scaler_results.iloc[0]['Scaler']\n",
     "best_scaler = scalers[best_scaler_name]\n",
     "X_train_scaled = best_scaler.fit_transform(X_train)\n",
-    "X_test_scaled = best_scaler.transform(X_test)"
+    "X_test_scaled = best_scaler.transform(X_test)\n",
+    "\n",
+    "joblib.dump(best_scaler, '../../models/scaler.joblib')"
    ]
   },
   {
@@ -292,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 135,
    "id": "c7088f35",
    "metadata": {},
    "outputs": [],
@@ -309,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 136,
    "id": "c5710035",
    "metadata": {},
    "outputs": [],
@@ -340,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 137,
    "id": "41a343b0",
    "metadata": {},
    "outputs": [
@@ -348,7 +373,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000180 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000224 seconds.\n",
       "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 479\n",
       "[LightGBM] [Info] Number of data points in the train set: 11679, number of used features: 5\n",
@@ -437,7 +462,7 @@
        "1    Extra Trees  204.232410  77908.970171  279.121784  0.654246"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 137,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 138,
    "id": "c0159a39",
    "metadata": {},
    "outputs": [],
@@ -481,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 139,
    "id": "1e2de9aa",
    "metadata": {},
    "outputs": [
@@ -489,7 +514,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000270 seconds.\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.000187 seconds.\n",
       "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 479\n",
       "[LightGBM] [Info] Number of data points in the train set: 11679, number of used features: 5\n",
