--- a/src/notebooks/tunning.ipynb
+++ b/src/notebooks/tunning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 302,
    "id": "870848cc",
    "metadata": {},
    "outputs": [],
@@ -16,13 +16,13 @@
     "from sklearn.preprocessing import MinMaxScaler\n",
     "\n",
     "from xgboost import XGBRegressor\n",
-    "from sklearn.model_selection import GridSearchCV, learning_curve\n",
+    "from sklearn.model_selection import GridSearchCV, RandomizedSearchCV, learning_curve\n",
     "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 303,
    "id": "eae14631",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 304,
    "id": "95a62ac3",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 305,
    "id": "10b71b9f",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 306,
    "id": "f2395b05",
    "metadata": {},
    "outputs": [],
@@ -78,14 +78,14 @@
     "    'subsample': [0.5, 0.7, 0.8, 0.9, 1.0],\n",
     "    'colsample_bytree': [0.5, 0.7, 0.8, 0.9, 1.0],\n",
     "    'gamma': [0, 0.1, 0.3, 0.5, 1],\n",
-    "    'reg_alpha': [0, 0.01, 0.1, 0.5, 1],\n",
+    "    'reg_alpha': [0, 0.01, 0.9, 0.5, 1],\n",
     "    'reg_lambda': [0, 0.01, 0.1, 0.5, 1],\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "id": "aa11cf71",
    "metadata": {},
    "outputs": [
@@ -93,12 +93,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Fitting 5 folds for each of 20 candidates, totalling 100 fits\n",
-      "Best parameters: {'learning_rate': 0.06, 'max_depth': 6, 'min_child_weight': 1, 'n_estimators': 900}\n"
+      "Fitting 5 folds for each of 500 candidates, totalling 2500 fits\n",
+      "Best parameters: {'subsample': 0.7, 'reg_lambda': 0.1, 'reg_alpha': 1, 'n_estimators': 1000, 'min_child_weight': 1, 'max_depth': 9, 'learning_rate': 0.01, 'gamma': 0.3, 'colsample_bytree': 0.9}\n"
      ]
     }
    ],
    "source": [
+    "# grid_search = RandomizedSearchCV(\n",
+    "#     estimator=xgb,\n",
+    "#     param_distributions=param_grid,\n",
+    "#     scoring=\"neg_mean_squared_error\",\n",
+    "#     cv=5,\n",
+    "#     n_iter=500,\n",
+    "#     n_jobs=-1,\n",
+    "#     verbose=3,\n",
+    "# )\n",
+    "\n",
     "grid_search = GridSearchCV(\n",
     "    estimator=xgb,\n",
     "    param_grid=param_grid,\n",
@@ -115,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 308,
    "id": "f62dee69",
    "metadata": {},
    "outputs": [],
@@ -129,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 309,
    "id": "fa6891c8",
    "metadata": {},
    "outputs": [],
@@ -147,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 310,
    "id": "d36e3265",
    "metadata": {},
    "outputs": [
@@ -179,23 +189,23 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>MAE</th>\n",
-       "      <td>144.285417</td>\n",
-       "      <td>197.287166</td>\n",
+       "      <td>134.903970</td>\n",
+       "      <td>194.090081</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>MSE</th>\n",
-       "      <td>38073.508662</td>\n",
-       "      <td>68827.432545</td>\n",
+       "      <td>32389.464080</td>\n",
+       "      <td>66652.893728</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>RMSE</th>\n",
-       "      <td>195.124342</td>\n",
-       "      <td>262.349829</td>\n",
+       "      <td>179.970731</td>\n",
+       "      <td>258.172217</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>R²</th>\n",
-       "      <td>0.836641</td>\n",
-       "      <td>0.713910</td>\n",
+       "      <td>0.861029</td>\n",
+       "      <td>0.722949</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -203,13 +213,13 @@
       ],
       "text/plain": [
        "             Train          Test\n",
-       "MAE     144.285417    197.287166\n",
-       "MSE   38073.508662  68827.432545\n",
-       "RMSE    195.124342    262.349829\n",
-       "R²        0.836641      0.713910"
+       "MAE     134.903970    194.090081\n",
+       "MSE   32389.464080  66652.893728\n",
+       "RMSE    179.970731    258.172217\n",
+       "R²        0.861029      0.722949"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 310,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 311,
    "id": "2ee63329",
    "metadata": {},
    "outputs": [],
@@ -273,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 312,
    "id": "1cae1186",
    "metadata": {},
    "outputs": [],
